Got app working

--- a/app/index.html
+++ b/app/index.html
@@ -10,7 +10,21 @@
     <link rel="shortcut icon" href="/ivy--favicon.png">
   </head>
   <body>
-    <div id='application' />
+    <section className="hero is-medium">
+      <div className="hero-body">
+        <div className="container">
+          <div className="content has-text-centered">
+            <div className="columns">
+              <div className="column"></div>
+              <div className="column is-two-thirds">
+                <img src="/images/WORKINGTHEORY-blue.png" alt='Working Theory'/>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      </section>
+    </body>
     <script src="/app.js"></script>
   </body>
 </html>
