Switch to static css

--- a/app/index.html
+++ b/app/index.html
@@ -4,27 +4,26 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Working Theory | We build incentivized software</title>
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css" integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet">
-    <link rel="stylesheet" href="https://use.typekit.net/bgs1tna.css">
-    <link rel="shortcut icon" href="/ivy--favicon.png">
+    <link rel="stylesheet" href="/vendor/bulma.css" >
   </head>
   <body>
-    <section className="hero is-medium">
-      <div className="hero-body">
-        <div className="container">
-          <div className="content has-text-centered">
-            <div className="columns">
-              <div className="column"></div>
-              <div className="column is-two-thirds">
-                <img src="/images/WORKINGTHEORY-blue.png" alt='Working Theory'/>
-              </div>
+    <section class="section">
+      <div class="container">
+        <div class="content has-text-centered">
+          <div class="columns">
+            <div class="column">
+              <img src="/images/WORKINGTHEORY-blue.png" alt='Working Theory'/>
+              <img src="/images/WORKINGTHEORY-cyan.png" alt='Working Theory'/>
+              <img src="/images/WORKINGTHEORY-green.png" alt='Working Theory'/>
+              <img src="/images/WORKINGTHEORY-orange.png" alt='Working Theory'/>
+              <img src="/images/WORKINGTHEORY-purple.png" alt='Working Theory'/>
             </div>
+          </div>
+          <div class='columns'>
+
           </div>
         </div>
       </div>
-      </section>
-    </body>
-    <script src="/app.js"></script>
+    </section>
   </body>
 </html>
