--- a/app/index.html
+++ b/app/index.html
@@ -20,7 +20,9 @@
             </div>
           </div>
           <div class='columns'>
-
+            <h1 className='title has-text-grey-light has-text-centered'>
+              We design and build solutions using blockchain technology
+            </h1>
           </div>
         </div>
       </div>
